--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
-title: John Doe
-bio: A Person who travels the world eating noodles
+title: Nan
+bio: NaN
 
 # twitter summary info
 description: A blog about technology and stuff related
@@ -20,8 +20,8 @@ resume: true
 resume-external: true
 resume-url: https://google.com/?q=my+resume
 
-url: https://sergiokopplin.github.io/indigo
-# your url: https://USERNAME.github.io
+url: https://metadaoge.github.io
+# your url: https://metadaoge.github.io
 
 permalink: /:title/
 
