--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ disqus:
 #instagram: myinstagram
 #linkedin: mylinkedin
 #github: mygithub
-email: rwx@live.com
+email: metadog@foxmail.com
 
 authors:
   metadaoge:
