--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ disqus:
 
 # if you don't have any of social below, comment the line
 #facebook: myfacebook
-#twitter: mytwitter
+weibo: 5650319019
 #instagram: myinstagram
 #linkedin: mylinkedin
 #github: mygithub
