add telegram link support

--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,8 @@ disqus:
 
 # if you don't have any of social below, comment the line
 #facebook: myfacebook
-weibo: 5650319019
+#weibo: myweiboUserId
+telegram: ziyuankong_LZ
 #instagram: myinstagram
 #linkedin: mylinkedin
 #github: mygithub
